great-idea/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */


.container{
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	margin: 0 auto;
	width: 1000px;
}

/* Header tags */
header{
	display: flex;
    flex-wrap: nowrap;
    position: fixed;
    width: 1000px;
    height: 100px; 
    align-items: center;
    justify-content: space-between;
}
 nav{
	display: flex;
    position: static;
    justify-content: space-between;
    width: 700px;
    height: 20px;
    flex-wrap: nowrap;
    align-items: center;
}

 nav a{
font-size: 12px;
padding: 20px 20px 20px 0;
color: gray;
position: relative;
bottom: 15px;
text-decoration: none;
}

 .logo{
    position: static;
    /*margin: auto;*/
    margin-bottom: 40px;
    align-items: flex-end;
}


.firstSection{
    flex-wrap: nowrap;
    width: 1000px;
    height: 500px;
    display: flex;
    /* margin: 75px 25px 50px 25px; */
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
    z-index: -1;
}

h1 {
	font-size: 75px;
	text-align: center;
}

.getStarted{
	background-color: white;
	height: 30px;
	width: 150px;
	border: 1px solid black;
	text-align: center;
	padding-top: 6px;
	margin-left: 30%;
}

.innovation{
    z-index: -1;
    /* display: inline-block; */
    position: relative;
    /* bottom: 30px; */
    /* margin: 50px; */
    width: 400px;
    /* height: 500px; */
}

.codeSnippet{
display: inline-block;
    margin-left: 75px;
    /* margin: 50px; */
    width: 390px;
}

.codeSnippet img{
	width: 350px;
	/* height: 350px; */
}

.mainBody{
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	justify-content: space-evenly;
	border-top: 1px solid black;
	border-bottom: 1px solid black;
	padding: 10px 0;
	z-index: -1;
}

.upperMain {
    display: flex;
    width: 1000px;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: nowrap;
    height: 175px;
}

.child1 {
	width: 425px;
    height: 125px;
}

/*.features {
    width: 425px;
    height: 125px;
}

.about {
    width: 425px;
    height: 125px;
}
*/
.middle-img {
	width: 1000px;
}

.lowerMain {
	margin: 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: nowrap;
    align-items: center;
    /* margin: 40px 10px 10px 10px; */
}

.child2 {
 width: 315px;
 height: 125px;
 box-sizing: border-box;
 margin: 30px 0 60px;
 padding: 20px;
}

/*.services {
}

.product {
}

.vision {
}*/

footer{
	display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    margin-top: 40px;
    margin-left: 20px;
    width: 1000px;
    height: 250px;
}


.copyright {
    display: flex;
    flex-direction: row;
    margin: 40px;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 100px;
    margin: auto;
}

/*SERVICES.HTML EXCLUSIVE ELEMENTS */


h2 {
	font-size: 40px;
	/*text-align: center;*/
}


.firstSection2{
	    flex-wrap: wrap;
	        width: 1000px;
    height: 500px;
    display: flex;
    /* margin: 75px 25px 50px 25px; */
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
    z-index: -1;
}

.services-header{
	width: 1000px;
	height: 125px;

}
.services-header-img {
	width: 1000px;
}

.services{
	font-size: 18px;
}


.mainBody2{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    border-top: 1px solid black;
    border-bottom: 5px solid black;
    padding: 50px 0 0 0;
    z-index: -1;
}

.child3{
    justify-content: space-evenly;
    width: 475px;
    height: 220px;
    border: 3px solid black;
    background: lavender;
    padding: 30px;
    margin-bottom: 40px;
    background-color: lavender;
}

button {
    border-radius: 8px;
    text-align: center;
    padding: 10px 40px;
    border: solid 2px black;
    border-bottom: solid 2px lightgrey;
    background: white;
    margin: 17px 0;
}

.footer2{
	display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
    width: 1000px;
     height: 300px;
}

.things{
	flex-direction: column;
	flex-wrap: wrap;
}

